refactor: migrate existing menus to new Button/Menu/PaginatedMenu system